--- a/grad.html
+++ b/grad.html
@@ -183,7 +183,7 @@ to do with homotopy coherence problem and ∞-categories are what we need.</li>
                 <a onclick="toggle_visibility('5');">
                     <i>Rational homotopy theory 2</i></a><br />
                 <div id="5" class="toshow" style="display:none">
-                    <li><a href="notes/minimal model from Postnikov tower.jpg" target="_blank">Slides</a></li>
+                    <li><a href="notes/minimal model from Postnikov tower.pdf" target="_blank">Slides</a></li>
                     </div>
             </p>
 
