--- a/index.html
+++ b/index.html
@@ -249,9 +249,10 @@
             <p>May 10, '21, 
                 <b>Siyu Cen</b>, 
                 <a onclick="toggle_visibility('27');">
-                    <i>Persistent Homology of Geospatial Data: A Case Study with Voting</i></a><br />
+                    <i>Persistent homology for geospatial data of voting</i></a><br />
                 <div id="27" class="toshow" style="display:none">
-                    <li>Michelle Feng, Mason A. Porter , <a href="https://epubs.siam.org/doi/abs/10.1137/19M1241519" target="_blank">Persistent Homology of Geospatial Data: A Case Study with Voting</a></li>
+                    <li><a href="notes/notes-voting.pdf" target="_blank">Notes</a></li>
+                    <li>Michelle Feng and Mason A. Porter , <a href="https://doi.org/10.1137/19M1241519" target="_blank">Persistent homology of geospatial data: a case study with voting</a></li>
                 </div>
             </p>
 
@@ -460,6 +461,7 @@
                 <li>Gunnar Carlsson, <a href="https://www.ams.org/publications/journals/notices/201801/rnoti-p6.pdf" target="_blank">Topological modeling of complex data</a></li>
                 <li>Jiahui Chen, Rundong Zhao, Yiying Tong, and Guo-Wei Wei, <a href="https://www.aimsciences.org/article/doi/10.3934/dcdsb.2020257" target="_blank">Evolutionary de Rham-Hodge method</a></li>
                 <li>Vin de Silva and Gunnar Carlsson, <a href="https://diglib.eg.org/handle/10.2312/SPBG.SPBG04.157-166" target="_blank">Topological estimation using witness complexes</a></li>
+                <li>Michelle Feng and Mason A. Porter , <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=4209654" target="_blank">Persistent homology of geospatial data: a case study with voting</a></li>
                 <li>Cohen-Steiner, Edelsbrunner, and Harer, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=2279866" target="_blank">Stability of persistence diagrams</a></li>
                 <li>Michael L. Connolly, <a href="https://onlinelibrary.wiley.com/doi/abs/10.1107/S0021889885010779" target="_blank">Molecular surface triangulation</a></li>
                 <li>Herbert Edelsbrunner and John L. Harer, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=2572029" target="_blank">Computational topology: an introduction</a></li>
