--- a/index.html
+++ b/index.html
@@ -252,16 +252,17 @@
                     <i>Persistent homology for geospatial data of voting</i></a><br />
                 <div id="27" class="toshow" style="display:none">
                     <li><a href="notes/notes-voting.pdf" target="_blank">Notes</a></li>
-                    <li>Michelle Feng and Mason A. Porter , <a href="https://doi.org/10.1137/19M1241519" target="_blank">Persistent homology of geospatial data: a case study with voting</a></li>
+                    <li>Michelle Feng and Mason A. Porter, <a href="https://doi.org/10.1137/19M1241519" target="_blank">Persistent homology of geospatial data: a case study with voting</a></li>
                 </div>
             </p>
 
             <p>May 17, '21, 
                 <b>Xiabing Ruan</b>, 
                 <a onclick="toggle_visibility('28');">
-                    <i>TBA</i></a><br />
+                    <i>Persistent homology for data of syntactic structures of world languages</i></a><br />
                 <div id="28" class="toshow" style="display:none">
-                    
+                    <li><a href="notes/notes-syntactic.pdf" target="_blank">Notes</a></li>
+                    <li>Alexander Port, Taelin Karidi, Matilde Marcolli, <a href="notes/syntactic.pdf" target="_blank">Topological Analysis of Syntactic Structures</a></li>
                 </div>
             </p>
 
@@ -473,6 +474,7 @@
                 <li>Washington Mio, <a href="https://www.sustech.edu.cn/zh/topological-analysis-of-structural-and-functional-data.html" target="_blank">Topological analysis of structural and functional data</a></li>
                 <li>Steve Y. Oudot, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=3408277" target="_blank">Persistence theory: from quiver representations to data analysis</a></li>
                 <li>Jose A. Perea, <a href="https://www.ams.org/journals/notices/201905/rnoti-p686.pdf" target="_blank">Topological time series analysis</a></li>
+                <li>Alexander Port, Taelin Karidi, Matilde Marcolli, <a href="https://arxiv.org/abs/1903.05181" target="_blank">Topological Analysis of Syntactic Structures</a></li>
                 <li>Raúl Rabadán and Andrew J. Blumberg, <a href="https://www.cambridge.org/core/books/topological-data-analysis-for-genomics-and-evolution/FCC8429FAD2B5D1525AEA47A8366D6EB" target="_blank">Topological data analysis for genomics and evolution: topology in biology</a></li>
                 <li>Michael T. Schaub et al, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=4094473" target="_blank">Random walks on simplicial complexes and the normalized Hodge 1-Laplacian</a></li>
                 <li>Guowei Wei, <a href="https://icm.sustech.edu.cn/science/15" target="_blank">Mathematical AI for drug discovery</a></li>
