--- a/index.html
+++ b/index.html
@@ -269,11 +269,12 @@
             <p>May 24, '21, 
                 <b>Yuqing Xing</b>, 
                 <a onclick="toggle_visibility('29');">
-                    <i>Persistent homology applied in classification and variation dectection of plant morphology</i></a><br/>
+                    <i>Persistent homology for data of plant morphology</i></a><br/>
                 <div id="29" class="toshow" style="display:none">
-                    <li>Yuqing Xing,<a href="slides/plants.pdf" target="_blank"> Slides</a></li>
-                    <li>Mao Li et al , <a href="https://www.frontiersin.org/articles/10.3389/fpls.2018.00553/full" target="_blank">Topological Data Analysis as a Morphometric Method: Using Persistent Homology to Demarcate a Leaf Morphospace</a></li>
-                    <li>Mao Li et al , <a href="https://academic.oup.com/plphys/article/177/4/1382/6117122" target="_blank">The Persistent Homology Mathematical Framework Provides Enhanced Genotype-to-Phenotype Associations for Plant Morphology</a></li>     
+                    <li><a href="slides/plants.pdf" target="_blank">Slides</a></li>
+                    <li>Mao Li et al, <a href="https://doi.org/10.3389/fpls.2018.00553" target="_blank">Topological data analysis as a morphometric method: using persistent homology to demarcate a leaf morphospace</a></li>
+                    <li>Mao Li et al, <a href="https://doi.org/10.1104/pp.18.00104" target="_blank">The persistent homology mathematical framework provides enhanced genotype-to-phenotype associations for plant morphology</a></li>     
+                <li>Mao Li et al, <a href="https://doi.org/10.1093/jxb/erz394" target="_blank">Characterizing 3D inflorescence architecture in grapevine using X-ray imaging and advanced morphometrics: implications for understanding cluster density</a></li>     
                 </div>
             </p>
 
@@ -471,7 +472,10 @@
                 <li>Ingrid Irmer, <a href="References.pdf" target="_blank">Some references for computational topology</a></li>
                 <li>Lida Kanari et al, <a href="https://link.springer.com/article/10.1007/s12021-017-9341-1" target="_blank">A topological representation of branching neuronal morphologies</a></li>
                 <li>Lida Kanari et al, <a href="https://academic.oup.com/cercor/article/29/4/1719/5304727" target="_blank">Objective morphological classification of neocortical pyramidal cells</a></li>
-                <li>Washington Mio, <a href="https://www.sustech.edu.cn/zh/topological-analysis-of-structural-and-functional-data.html" target="_blank">Topological analysis of structural and functional data</a></li>
+                <li>Mao Li et al, <a href="https://doi.org/10.1093/jxb/erz394" target="_blank">Characterizing 3D inflorescence architecture in grapevine using X-ray imaging and advanced morphometrics: implications for understanding cluster density</a></li>     
+                    <li>Mao Li et al, <a href="https://doi.org/10.1104/pp.18.00104" target="_blank">The persistent homology mathematical framework provides enhanced genotype-to-phenotype associations for plant morphology</a></li>     
+                <li>Mao Li et al, <a href="https://doi.org/10.3389/fpls.2018.00553" target="_blank">Topological data analysis as a morphometric method: using persistent homology to demarcate a leaf morphospace</a></li>
+                    <li>Washington Mio, <a href="https://www.sustech.edu.cn/zh/topological-analysis-of-structural-and-functional-data.html" target="_blank">Topological analysis of structural and functional data</a></li>
                 <li>Steve Y. Oudot, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=3408277" target="_blank">Persistence theory: from quiver representations to data analysis</a></li>
                 <li>Jose A. Perea, <a href="https://www.ams.org/journals/notices/201905/rnoti-p686.pdf" target="_blank">Topological time series analysis</a></li>
                 <li>Alexander Port, Taelin Karidi, and Matilde Marcolli, <a href="https://arxiv.org/abs/1903.05181" target="_blank">Topological analysis of syntactic structures</a></li>
