--- a/grad.html
+++ b/grad.html
@@ -173,7 +173,7 @@ to do with homotopy coherence problem and ∞-categories are what we need.</li>
                 <a onclick="toggle_visibility('4');">
                     <i>Rational homotopy theory 1</i></a><br />
                 <div id="4" class="toshow" style="display:none">
-                    <li>Yves Felix, Stephen Halperin, Jean-Claude Thomas, Rational Homotopy Theory (GTM205)</a></li>
+                    <li>Yves Félix, Stephen Halperin, and Jean-Claude Thomas, <a href="https://link.springer.com/book/10.1007/978-1-4613-0105-9" target="_blank">Rational homotopy theory</a></a></li>
                     <li><a href="notes/rational homotopy theory(1).pdf" target="_blank">Slides</a></li>
                     </div>
             </p>
