--- a/grad.html
+++ b/grad.html
@@ -171,7 +171,7 @@ to do with homotopy coherence problem and ∞-categories are what we need.</li>
             <p>May 17, '21, 
                 <b>Siheng Yi</b>, 
                 <a onclick="toggle_visibility('4');">
-                    <i>Rational homotopy theory 1</i></a><br />
+                    <i>Rational homotopy theory</i></a><br />
                 <div id="4" class="toshow" style="display:none">
                     <li>Yves Félix, Stephen Halperin, and Jean-Claude Thomas, <a href="https://link.springer.com/book/10.1007/978-1-4613-0105-9" target="_blank">Rational homotopy theory</a></a></li>
                     <li><a href="notes/rational homotopy theory(1).pdf" target="_blank">Slides</a></li>
@@ -181,7 +181,7 @@ to do with homotopy coherence problem and ∞-categories are what we need.</li>
             <p>May 24, '21, 
                 <b>Siheng Yi</b>, 
                 <a onclick="toggle_visibility('5');">
-                    <i>Rational homotopy theory 2</i></a><br />
+                    <i>Rational homotopy theory (cont'd)</i></a><br />
                 <div id="5" class="toshow" style="display:none">
                     <li><a href="notes/minimal model from Postnikov tower.pdf" target="_blank">Slides</a></li>
                     </div>
