--- a/grad.html
+++ b/grad.html
@@ -163,8 +163,8 @@ to do with homotopy coherence problem and ∞-categories are what we need.</li>
                 <a onclick="toggle_visibility('3');">
                     <i>Introduction to spectral sequences, II</i></a><br />
                 <div id="3" class="toshow" style="display:none">
-            <li>John McCleary, <a href="https://doi.org/10.1017/CBO9780511626289" target="_blank">A user's guide to spectral sequences (2nd edition)</a></li>
                     <li><a href="slides/SS.0510.pdf" target="_blank">Slides</a></li>
+                    <li>John McCleary, <a href="https://doi.org/10.1017/CBO9780511626289" target="_blank">A user's guide to spectral sequences (2nd edition)</a></li>
                 </div>
             </p>
 
@@ -173,9 +173,9 @@ to do with homotopy coherence problem and ∞-categories are what we need.</li>
                 <a onclick="toggle_visibility('4');">
                     <i>Rational homotopy theory</i></a><br />
                 <div id="4" class="toshow" style="display:none">
+                    <li><a href="notes/rational homotopy theory(1).pdf" target="_blank">Notes</a></li>
                     <li>Yves Félix, Stephen Halperin, and Jean-Claude Thomas, <a href="https://link.springer.com/book/10.1007/978-1-4613-0105-9" target="_blank">Rational homotopy theory</a></a></li>
-                    <li><a href="notes/rational homotopy theory(1).pdf" target="_blank">Slides</a></li>
-                    </div>
+                </div>
             </p>
 
             <p>May 24, '21, 
@@ -183,7 +183,7 @@ to do with homotopy coherence problem and ∞-categories are what we need.</li>
                 <a onclick="toggle_visibility('5');">
                     <i>Rational homotopy theory (cont'd)</i></a><br />
                 <div id="5" class="toshow" style="display:none">
-                    <li><a href="notes/minimal model from Postnikov tower.pdf" target="_blank">Slides</a></li>
+                    <li><a href="notes/minimal model from Postnikov tower.pdf" target="_blank">Notes</a></li>
                     </div>
             </p>
 
