--- a/grad.html
+++ b/grad.html
@@ -187,6 +187,15 @@ to do with homotopy coherence problem and ∞-categories are what we need.</li>
                     </div>
             </p>
 
+            <p>May 31, '21, 10-11 am, 
+                <b>Yifan Wu</b>, 
+                <a onclick="toggle_visibility('6');">
+                    <i>K-theory</i></a><br />
+                <div id="6" class="toshow" style="display:none">
+                    
+                    </div>
+            </p>
+
             
 
    
