--- a/undergrad.html
+++ b/undergrad.html
@@ -164,8 +164,12 @@
     <p>May 13, '21, 
                 <b>Pengcheng Li</b>, <i>Wall's theorems and h-cobordisms</i></p>
     
-<p>May 20, '21, 
+    <p>May 20, '21, 
                 <b>Pengcheng Li</b>, <i>Wall's theorems and h-cobordisms (cont'd)</i></p>
+    
+    <p>Apr 20, '21, 
+                <b>Pengcheng Li</b>, <i>Wall's theorems and h-cobordisms (cont'd)</i>, 
+        <a href="notes/notes-.pdf" target="_blank">notes</a></p>
 <!--
 <h3>Possible Topics</h3>
 
