--- a/undergrad.html
+++ b/undergrad.html
@@ -169,7 +169,7 @@
         <a href="notes/notes-hcobordism and 4 manifolds.pdf" target="_blank">notes</a></p>
     
     <p>Jun 8, '21, 
-                <b>Wenbo Liao</b>, <i>Characteristic classes and spin structrue (cont'd)</i>, 
+                <b>Wenbo Liao</b>, <i>Characteristic classes and spin structrue </i>, 
         <a href="notes/notes-Characteristic_classes_and_spin_structrue.pdf" target="_blank">notes</a></p>
 <!--
 <h3>Possible Topics</h3>
