--- a/undergrad.html
+++ b/undergrad.html
@@ -168,8 +168,8 @@
                 <b>Pengcheng Li</b>, <i>Wall's theorems and h-cobordisms (cont'd)</i>, 
         <a href="notes/notes-hcobordism and 4 manifolds.pdf" target="_blank">notes</a></p>
     
-    <p>Jun 8, '21, 
-                <b>Wenbo Liao</b>, <i>Characteristic classes and spin structrue </i>, 
+    <p>Jun 9, '21, 
+                <b>Wenbo Liao</b>, <i>Characteristic classes and spin structures</i>, 
         <a href="notes/notes-Characteristic_classes_and_spin_structrue.pdf" target="_blank">notes</a></p>
 <!--
 <h3>Possible Topics</h3>
