--- a/grad.html
+++ b/grad.html
@@ -173,7 +173,7 @@ to do with homotopy coherence problem and ∞-categories are what we need.</li>
                 <a onclick="toggle_visibility('4');">
                     <i>Rational homotopy theory</i></a><br />
                 <div id="4" class="toshow" style="display:none">
-                    <li><a href="notes/rational homotopy theory(1).pdf" target="_blank">Notes</a></li>
+                    <li><a href="notes/gts/rational-hmtp-thy.pdf" target="_blank">Notes</a></li>
                     <li>Yves Félix, Stephen Halperin, and Jean-Claude Thomas, <a href="https://link.springer.com/book/10.1007/978-1-4613-0105-9" target="_blank">Rational homotopy theory</a></a></li>
                 </div>
             </p>
@@ -183,7 +183,7 @@ to do with homotopy coherence problem and ∞-categories are what we need.</li>
                 <a onclick="toggle_visibility('5');">
                     <i>Rational homotopy theory (cont'd)</i></a><br />
                 <div id="5" class="toshow" style="display:none">
-                    <li><a href="notes/minimal model from Postnikov tower.pdf" target="_blank">Notes</a></li>
+                    <li><a href="notes/min-model-Postnikov-tower.pdf" target="_blank">Notes</a></li>
                     </div>
             </p>
 
