--- a/undergrad.html
+++ b/undergrad.html
@@ -62,7 +62,7 @@
 
                     <ul class="header__nav">
                         <li><a href="index.html" target="_blank">Home</a></li>
-                    
+                         <li><a href="grad.html" title="" target="_blank">Graduate Seminar</a></li>
     
                     </ul> 
                     <a href="#0" title="Close Menu" class="header__overlay-close close-mobile-menu">Close</a>
