--- a/grad.html
+++ b/grad.html
@@ -146,7 +146,7 @@ natural transformation up to homotopy equivalence? Dywer, Kan and Smith
 pointed out in 1989 that the necessary and sufficient condition is homotopy
 coherence. However, it is very complicated to describe the phenomenon of homotopy coherence by ordinary categories. Therefore, we need a new framework
 to do with homotopy coherence problem and ∞-categories are what we need.</li>
-                    <li><a href="slides/Liang21.pdf" target="_blank">Slides</a></li>
+                    <li><a href="notes/gts/hmtp-coh-infty-cat.pdf" target="_blank">Slides</a></li>
                 </div>
             </p>
 
@@ -164,7 +164,7 @@ to do with homotopy coherence problem and ∞-categories are what we need.</li>
                 <a onclick="toggle_visibility('3');">
                     <i>Introduction to spectral sequences, II</i></a><br />
                 <div id="3" class="toshow" style="display:none">
-                    <li><a href="slides/SS.0510.pdf" target="_blank">Slides</a></li>
+                    <li><a href="notes/gts/spec-seq.pdf" target="_blank">Slides</a></li>
                     <li>John McCleary, <a href="https://doi.org/10.1017/CBO9780511626289" target="_blank">A user's guide to spectral sequences (2nd edition)</a></li>
                 </div>
             </p>
