--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 <a onclick="toggle_visibility('29');">
                     <i>Persistent homology for data of plant morphology</i></a><br/>
                 <div id="29" class="toshow" style="display:none">
-                    <li><a href="slides/plants.pdf" target="_blank">Slides</a></li>
+                    <li><a href="slides/Xing21.pdf" target="_blank">Slides</a></li>
                     <li>Mao Li et al, <a href="https://doi.org/10.3389/fpls.2018.00553" target="_blank">Topological data analysis as a morphometric method: using persistent homology to demarcate a leaf morphospace</a></li>
                     <li>Mao Li et al, <a href="https://doi.org/10.1104/pp.18.00104" target="_blank">The persistent homology mathematical framework provides enhanced genotype-to-phenotype associations for plant morphology</a></li>     
                 <li>Mao Li et al, <a href="https://doi.org/10.1093/jxb/erz394" target="_blank">Characterizing 3D inflorescence architecture in grapevine using X-ray imaging and advanced morphometrics: implications for understanding cluster density</a></li>     
