--- a/undergrad.html
+++ b/undergrad.html
@@ -164,11 +164,11 @@
     <p>May 13, '21, 
                 <b>Pengcheng Li</b>, <i>Wall's theorems and h-cobordisms</i></p>
     
-    <p>May 20, '21, 
+    <p>May 20, '21, Yidan 307, 
                 <b>Pengcheng Li</b>, <i>Wall's theorems and h-cobordisms (cont'd)</i>, 
         <a href="notes/ugts/Wall-thm.pdf" target="_blank">notes</a></p>
     
-    <p>Jun 9, '21, 
+    <p>Jun 9, '21, 10 am-12 pm, Yidan 307, 
                 <b>Wenbo Liao</b>, <i>Characteristic classes and spin structures</i>, 
         <a href="notes/ugts/char-cl-spin-str.pdf" target="_blank">notes</a></p>
 <!--
