--- a/grad.html
+++ b/grad.html
@@ -202,7 +202,7 @@ to do with homotopy coherence problem and ∞-categories are what we need.</li>
                 <a onclick="toggle_visibility('7');">
                     <i>Steenrod operations</i></a><br />
                 <div id="7" class="toshow" style="display:none">
-                    
+                    <li><a href="notes/power-opn.pdf" target="_blank">Slides</a></li>
                     </div>
             </p>
 
