--- a/grad.html
+++ b/grad.html
@@ -184,7 +184,7 @@ to do with homotopy coherence problem and ∞-categories are what we need.</li>
                 <a onclick="toggle_visibility('5');">
                     <i>Rational homotopy theory (cont'd)</i></a><br />
                 <div id="5" class="toshow" style="display:none">
-                    <li><a href="notes/min-model-Postnikov-tower.pdf" target="_blank">Notes</a></li>
+                    <li><a href="notes/gts/min-model-Postnikov-tower.pdf" target="_blank">Notes</a></li>
                     </div>
             </p>
 
@@ -202,7 +202,7 @@ to do with homotopy coherence problem and ∞-categories are what we need.</li>
                 <a onclick="toggle_visibility('7');">
                     <i>Steenrod operations</i></a><br />
                 <div id="7" class="toshow" style="display:none">
-                    <li><a href="notes/power-opn.pdf" target="_blank">Slides</a></li>
+                    <li><a href="notes/gts/power-opn.pdf" target="_blank">Slides</a></li>
                     </div>
             </p>
 
