--- a/grad.html
+++ b/grad.html
@@ -193,7 +193,7 @@ to do with homotopy coherence problem and ∞-categories are what we need.</li>
                 <a onclick="toggle_visibility('6');">
                     <i>K-theory</i></a><br />
                 <div id="6" class="toshow" style="display:none">
-                    
+                    <li><a href="notes/gts/K-Theory.pdf" target="_blank">Notes</a></li>
                     </div>
             </p>
 
