--- a/undergrad.html
+++ b/undergrad.html
@@ -171,6 +171,10 @@
     <p>Jun 9, '21, 10 am-12 pm, Yidan 307, 
                 <b>Wenbo Liao</b>, <i>Characteristic classes and spin structures</i>, 
         <a href="notes/ugts/char-cl-spin-str.pdf" target="_blank">notes</a></p>
+    
+    <p>Jun 23, '21, 3-5 pm, Yidan 307, 
+                <b>Xiabing Ruan</b></p>
+    
 <!--
 <h3>Possible Topics</h3>
 
