--- a/undergrad.html
+++ b/undergrad.html
@@ -173,8 +173,8 @@
         <a href="notes/ugts/char-cl-spin-str.pdf" target="_blank">notes</a></p>
     
     <p>Jun 23, '21, 3-5 pm, Yidan 307, 
-        <b>Xiabing Ruan</b>, <i>Characteristic classes and Rockhlin's Theorem</i>,
-        <a href="notes/ugts/notes4_4.pdf"  target="_blank">notes</a></p>
+        <b>Wenbo Liao and Xiabing Ruan</b>, <i>Characteristic classes and spin structures in dimension 4; characteristic elements and Rokhlin's theorem</i>,
+        <a href="notes/ugts/Rokhlin-16.pdf"  target="_blank">notes</a></p>
     
 <!--
 <h3>Possible Topics</h3>
