--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <li><a href="#A" title="">About</a></li>
                         <li><a href="#T" title="">Talks</a></li>
                         <li><a href="#R" title="">References</a></li>
-                        <li><a href="undergrad.html" title="" target="_blank">Undergraduate Seminar</a></li>
+                        <li><a href="undergrad" title="" target="_blank">Undergraduate Seminar</a></li>
                         <li><a href="grad.html" title="" target="_blank">Graduate Seminar</a></li>
     
                     </ul> 
