--- a/grad.html
+++ b/grad.html
@@ -62,7 +62,7 @@
 
                     <ul class="header__nav">
                         <li><a  href="index.html" title="" target="_blank">Home</a></li>
-                        <li><a href="undergrad.html" title="" target="_blank">Undergraduate Seminar</a></li>
+                        <li><a href="undergrad" title="" target="_blank">Undergraduate Seminar</a></li>
                         
     
                     </ul> 
