--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -61,8 +61,9 @@
                     <h2 class="header__nav-heading h6">Close after Select</h2>
 
                     <ul class="header__nav">
-                        <li><a href="index.html" target="_blank">Home</a></li>
-                         <li><a href="grad.html" title="" target="_blank">Graduate Seminar</a></li>
+                        <li><a href="/index.html" target="_blank">Home</a></li>
+                         <li><a href="/grad.html" title="" target="_blank">Graduate Seminar</a></li>
+    <li><a href="21spr" title="" target="_blank">Graduate Seminar</a></li>
     
                     </ul> 
                     <a href="#0" title="Close Menu" class="header__overlay-close close-mobile-menu">Close</a>
