--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -15,9 +15,9 @@
 
     <!-- CSS
     ================================================== -->
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/vendor.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/vendor.css">
+    <link rel="stylesheet" href="/css/main.css">
 
     <!-- script
     ================================================== -->
@@ -126,7 +126,7 @@
                 <a href="https://link.springer.com/book/10.1007/978-1-4757-3951-0" target="_blank">Differential forms in algebraic topology
 </a>.  We meet on Thursdays 4:20&ndash;6:10 in Liyuan-1-203.</p>
             
-            <p><a href="GT-student-seminar.pdf" target="_blank">Here</a> is a course description if you wish to register for credit.</p>
+            <p><a href="/undergrad/GT-student-seminar.pdf" target="_blank">Here</a> is a course description if you wish to register for credit.</p>
 
     <h3><a id="T"></a>Talks</h3>
     
@@ -190,7 +190,7 @@
 
 <h3>Possible Topics</h3>
 
-            <li>Applied and computational topology: continuation of <a href="index.html" target="_blank">ACTS</a> 
+            <li>Applied and computational topology: continuation of <a href="/index.html" target="_blank">ACTS</a> 
                 with <a href="Edelsbrunner-Harer.pdf" target="_blank">Edelsbrunner&ndash;Harer</a> Chapters VIII&ndash;IX and 
                 <a href="https://www.cambridge.org/core/books/topological-data-analysis-for-genomics-and-evolution/FCC8429FAD2B5D1525AEA47A8366D6EB" target="_blank">Rabadán&ndash;Blumberg</a> for theoretical aspects, along with
                 more specific readings towards applications.</li>
