--- a/undergrad/21spr/index.html
+++ b/undergrad/21spr/index.html
@@ -124,7 +124,7 @@
             <p>This is an undergrad student seminar on geometry and topology.  This semester, we will be working from Scorpan's 
                 <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=2136212" target="_blank">The wild world of 4-manifolds</a>.  We meet on Thursdays 4:20&ndash;6:10 in Liyuan-1-203.</p>
             
-            <p><a href="GT-student-seminar.pdf" target="_blank">Here</a> is a course description if you wish to register for credit.</p>
+            <p><a href="/undergrad/GT-student-seminar.pdf" target="_blank">Here</a> is a course description if you wish to register for credit.</p>
 
     <h3><a id="T"></a>Talks</h3>
     
