--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -123,8 +123,8 @@
 <h3><a id="A"></a>About</h3>
 
             <p>This is an undergrad student seminar on geometry and topology.  This semester, we will be working from Bott and Tu's 
-                <a href="https://link.springer.com/book/10.1007/978-1-4757-3951-0" target="_blank">Differential forms in algebraic topology
-</a>.  We meet on Thursdays 4:20&ndash;6:10 in Liyuan-1-203.</p>
+                <a href="https://link.springer.com/book/10.1007/978-1-4757-3951-0" target="_blank">Differential forms in algebraic topology</a>.  
+                We meet on Mondays 8:10&ndash;10:00 in Lecture-1-304.</p>
             
             <p><a href="/undergrad/GT-student-seminar.pdf" target="_blank">Here</a> is a course description if you wish to register for credit.</p>
 
