Update Talks and notes

--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -138,10 +138,14 @@
     <p>Sep 13, '21, 
         <b>Yunsheng Li</b>, 
         <i>De Rham theory in Euclidean spaces</i>, 
-        <a href="21fal/.pdf" target="_blank">notes</a>
+        <a href="21fal/Notes_on_Bott_Tu.pdf" target="_blank">notes</a>
     </p>
     
-
+    <p>Sep 27, '21, 
+        <b>Mingjie Wang</b>, 
+        <i>Mayer-Vietoris Sequences</i>, 
+        <a href="21fal/MV-notes.pdf" target="_blank">notes</a>
+    </p>
 
 
 
