--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -143,7 +143,7 @@
     
     <p>Sep 27, '21, 
         <b>Mingjie Wang</b>, 
-        <i>Mayer-Vietoris Sequences</i>, 
+        <i>Mayer-Vietoris sequences</i>, 
         <a href="21fal/MV-notes.pdf" target="_blank">notes</a>
     </p>
 
