--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -144,7 +144,7 @@
     <p>Sep 27, '21, 
         <b>Mingjie Wang</b>, 
         <i>Mayer-Vietoris sequences</i>, 
-        <a href="21fal/MV-notes.pdf" target="_blank">notes</a>
+        <a href="21fal/notes-on-mv-sequence.pdf" target="_blank">notes</a>
     </p>
 
 
