--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -150,6 +150,10 @@
         <a href="21fal/notes-on-mv-sequence.pdf" target="_blank">notes</a>
     </p>
 
+    <p>Oct 11, '21,  
+        <i>TBA</i>
+    </p>
+
 
 
 
