--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -141,17 +141,24 @@
     <p>Sep 13, '21, 
         <b>Yunsheng Li</b>, 
         <i>De Rham theory in Euclidean spaces</i>, 
-        <a href="21fal/Notes_on_Bott_Tu.pdf" target="_blank">notes</a>
+        <a href="21fal/Notes_on_Bott_Tu.pdf" target="_blank">notes on De Rham theory</a>
     </p>
     
     <p>Sep 27, '21, 
         <b>Mingjie Wang</b>, 
         <i>Mayer-Vietoris sequences</i>, 
-        <a href="21fal/notes-on-mv-sequence.pdf" target="_blank">notes</a>
+        <a href="21fal/notes-on-mv-sequence.pdf" target="_blank">notes on Mayer-Vietoris sequences/a>
     </p>
 
     <p>Oct 11, '21,  
-        <i>TBA</i>
+        <b>Ruoyu Xu</b>, 
+        <i>Orientation and Integration & Poincare Lemmas</i>, 
+        <a href="21fal/notes on orientation and integration.pdf" target="_blank">notes on orientation and integration</a>
+    </p> 
+    
+    <p>Oct 18, '21,  
+        <b>Ruoyu Xu</b>, 
+        <i>Poincare Lemmas (continue)</i>,
     </p>
 
 
