--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -147,7 +147,7 @@
     <p>Sep 27, '21, 
         <b>Mingjie Wang</b>, 
         <i>Mayer-Vietoris sequences</i>, 
-        <a href="21fal/notes-on-mv-sequence.pdf" target="_blank">notes on Mayer-Vietoris sequences/a>
+        <a href="21fal/notes-on-mv-sequence.pdf" target="_blank">notes on Mayer-Vietoris sequences</a>
     </p>
 
     <p>Oct 11, '21,  
