--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -125,7 +125,7 @@
             <p>This is an undergraduate student seminar on geometry and topology.  This semester, we will be working from Bott and Tu's 
                 <a href="https://link.springer.com/book/10.1007/978-1-4757-3951-0" target="_blank">Differential forms in algebraic topology</a>, 
                 with supplementary materials from participants of the Physics Department as well as from 
-                <a href="https://link.springer.com/book/10.1007/978-1-4757-3951-0" target="_blank">Differential cohomology: 
+                <a href="https://arxiv.org/abs/2109.12250" target="_blank">Differential cohomology: 
                     categories, characteristic classes, and connections</a> edited by Araminta Amabel, Arun Debray, and Peter Haine.  
                 We meet on Mondays 8:10&ndash;10:00 a.m. in Lecture Hall 1-304.</p>
             
