--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <li><a href="#T" title="">Talks</a></li>
                         <li><a href="#R" title="">References</a></li>
                         <li><a href="undergrad" title="" target="_blank">Undergraduate Seminar</a></li>
-                        <li><a href="grad.html" title="" target="_blank">Graduate Seminar</a></li>
+                        <li><a href="grad" title="" target="_blank">Graduate Seminar</a></li>
     
                     </ul> 
                     <a href="#0" title="Close Menu" class="header__overlay-close close-mobile-menu">Close</a>
