--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -62,7 +62,7 @@
 
                     <ul class="header__nav">
                         <li><a href="/index.html" target="_blank">Home</a></li>
-                         <li><a href="/grad.html" title="" target="_blank">Graduate Seminar</a></li>
+                         <li><a href="/grad" title="" target="_blank">Graduate Seminar</a></li>
     <li><a href="21spr" title="" target="_blank">Spring 2021</a></li>
     
                     </ul> 
