--- a/grad/index.html
+++ b/grad/index.html
@@ -61,8 +61,8 @@
                     <h2 class="header__nav-heading h6">Close after Select</h2>
 
                     <ul class="header__nav">
-                        <li><a  href="index.html" title="" target="_blank">Home</a></li>
-                        <li><a href="undergrad" title="" target="_blank">Undergraduate Seminar</a></li>
+                        <li><a  href="/index.html" title="" target="_blank">Home</a></li>
+                        <li><a href="/undergrad" title="" target="_blank">Undergraduate Seminar</a></li>
                         
     
                     </ul> 
