--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -152,15 +152,21 @@
 
     <p>Oct 11, '21,  
         <b>Ruoyu Xu</b>, 
-        <i>Orientation and Integration & Poincare Lemmas</i>, 
+        <i>Orientation and Integration</i>, 
         <a href="21fal/notes on orientation and integration.pdf" target="_blank">notes on orientation and integration</a>
     </p> 
     
     <p>Oct 18, '21,  
         <b>Ruoyu Xu</b>, 
-        <i>Poincare Lemmas (continue)</i>,
+        <i>Poincare Lemmas</i>,
     </p>
-
+    
+    <p>Oct 25, '21,  
+        <b>Ruoyu Xu</b>, 
+        <i>Degree of Proper Maps</i>,
+        <b>Yunsheng Li</b>,
+        <i>Mayer-Vietoris Argument</i>
+    </p>
 
 
 
