--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -158,7 +158,7 @@
     
     <p>Oct 18, '21,  
         <b>Ruoyu Xu</b>, 
-        <i>Poincare Lemmas</i>,
+        <i>Poincare Lemmas</i>
     </p>
     
     <p>Oct 25, '21,  
