--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -159,6 +159,7 @@
     <p>Oct 18, '21,  
         <b>Ruoyu Xu</b>, 
         <i>Poincare Lemmas</i>
+         <a href="21fal/notes on Poincare Lemmas.pdf" target="_blank">notes on Poincare Lemmas</a>
     </p>
     
     <p>Oct 25, '21,  
