--- a/acts/index.html
+++ b/acts/index.html
@@ -21,8 +21,8 @@
 
     <!-- script
     ================================================== -->
-    <script src="/js/modernizr.js"></script>
-    <script src="/js/pace.min.js"></script>
+    <script src="js/modernizr.js"></script>
+    <script src="js/pace.min.js"></script>
 <script type="text/javascript">
 <!--
     function toggle_visibility(id) {
@@ -61,7 +61,7 @@
                     <h2 class="header__nav-heading h6">Close after Select</h2>
 
                     <ul class="header__nav">
-                        <li><a href="/index.html" title="">Home</a></li>
+                        <li><a href="/" title="">Home</a></li>
                         <li><a href="#A" title="">About</a></li>
                         <li><a href="#T" title="">Talks</a></li>
                         <li><a href="#R" title="">References</a></li>
