--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <h2 class="header__nav-heading h6">Close after Select</h2>
 
                     <ul class="header__nav">
-                        <li><a href="acts" title="" target="_blank">Applied and Computational Topology Seminar</a></li>
+                        <li><a href="acts" title="" target="_blank">Appl. Comput. Topol. Seminar</a></li>
                         <li><a href="undergrad" title="" target="_blank">Undergraduate Seminar</a></li>
                         <li><a href="grad" title="" target="_blank">Graduate Seminar</a></li>
     
