--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 <h3>Talks in Fall 2021 (mostly Mondays 4:20&ndash;5:10)</h3>
 
-            <p>Oct 22, '21 (Friday, 9:00&ndash;10:00 pm, zoom: 976 6122 0179, passcode: 645744), 
+            <p>Oct 22, '21 (Friday, 9:00&ndash;10:00 am, zoom: 976 6122 0179, passcode: 645744), 
                 <b><a href="https://sites.google.com/view/xuzhouli/home" target="_blank">Zhouli Xu</a></b> (University of California, San Diego), 
                 <a onclick="toggle_visibility('1');">
                     <i>In and around stable homotopy groups of spheres</i></a><br />
