--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 </div>
             </p>
         
-            <p>Nov 1, '21 (zoom), 
+            <p>Nov 1, '21 (zoom: 990 059 7381, passcode: 511316), 
                 <b><a href="https://sites.google.com/site/hrzsea/" target="_blank">Ruizhi Huang</a></b> 
                 (Chinese Academy of Sciences), 
                 <a onclick="toggle_visibility('2');">
