--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -198,6 +198,16 @@
         <b>Yunsheng Li</b>,
         <i>Presheaves and Čech Cohomology</i>
     </p>
+    
+    <p>Dec 20, '21,  
+        <b>Gen Yue</b>,
+        <i>Application of de Rham Cohomology in Physics & Introduction to Topological Phase</i>
+    </p>
+    
+    <p>Dec 27, '21,  
+        <b>Gen Yue</b>,
+        <i>Application of de Rham Cohomology in Physics & Introduction to Topological Phase (Continue)</i>
+    </p>
 
 <br /><br /><br />
 <p></p>
