--- a/index.html
+++ b/index.html
@@ -176,13 +176,18 @@
                 </div>
             </p>
         
-            <p>TBD (zoom), 
+            <p>Nov 19 (Friday, 9:00&ndash;10:00 am, zoom), 
                 <b><a href="https://sites.google.com/view/prasit0605/home" target="_blank">Prasit Bhattacharya</a></b> 
                 (University of Notre Dame), 
                 <a onclick="toggle_visibility('5');">
-                    <i>TBA</i></a><br />
+                    <i>Equivariant Steenrod Operations</i></a><br />
                 <div id="5" class="toshow" style="display:none">
-                    TBA
+                    Classical Steenrod algebra is one of the most fundamental algebraic gadgets in stable homotopy theory.  
+                    It led to the theory of characteristic classes, which is key to some of the most celebrated applications 
+                    of homotopy theory to geometry.  The G-equivariant Steenrod algebra is not known beyond the group of 
+                    order 2.  In this talk, I will recall a geometric construction of the classical Steenrod algebra and 
+                    generalize it to construct G-equivariant Steenrod operations.  Time permitting, I will discuss potential 
+                    applications to equivariant geometry.
                 </div>
             </p>
 
