--- a/index.html
+++ b/index.html
@@ -170,9 +170,13 @@
                 <b><a href="https://www.weiyanc.com/" target="_blank">Weiyan Chen</a></b> 
                 (Tsinghua University), 
                 <a onclick="toggle_visibility('4');">
-                    <i>TBA</i></a><br />
+                    <i>Choosing points on cubic plane curves</i></a><br />
                 <div id="4" class="toshow" style="display:none">
-                    TBA
+                    It is a classical topic to study structures of certain special points on complex smooth cubic plane curves, 
+                    for example, the 9 flex points and the 27 sextactic points.  We consider the following topological question 
+                    asked by Farb: Is it true that the known algebraic structures give all the possible ways to continuously 
+                    choose n distinct points on every smooth cubic plane curve, for each given positive integer n?  This work is 
+                    joint with Ishan Banerjee.
                 </div>
             </p>
         
