--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -21,8 +21,8 @@
 
     <!-- script
     ================================================== -->
-    <script src="js/modernizr.js"></script>
-    <script src="js/pace.min.js"></script>
+    <script src="/js/modernizr.js"></script>
+    <script src="/js/pace.min.js"></script>
 <script type="text/javascript">
 <!--
     function toggle_visibility(id) {
