--- a/undergrad/21spr/index.html
+++ b/undergrad/21spr/index.html
@@ -178,6 +178,12 @@
         <b>Wenbo Liao and Xiabing Ruan</b>, <i>Characteristic classes and spin structures in dimension 4; characteristic elements and Rokhlin's theorem</i>,
         <a href="Rokhlin-16.pdf"  target="_blank">notes</a></p>
     
+<h3>Further reading</h3>
+
+            <p> Joshua Evan Greene, 
+                <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=2136212" target="_blank">Heegaard Floer homology</a> 
+                (a treasure map to low-dimensional topology).</p>
+    
 <!--
 <h3>Possible Topics</h3>
 
