--- a/undergrad/21spr/index.html
+++ b/undergrad/21spr/index.html
@@ -181,7 +181,7 @@
 <h3>Further reading</h3>
 
             <p> Joshua Evan Greene, 
-                <a href="https://www.ams.org/journals/notices/202101/rnoti-p19.pdf" target="_blank">Heegaard Floer homology</a> 
+                <a href="https://www.ams.org/journals/notices/202101/rnoti-p19.pdf" target="_blank"><i>Heegaard Floer homology</i></a> 
                 (a treasure map to low-dimensional topology).</p>
     
 <!--
