--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 </div>
             </p>
 
-            <p>Dec 10, '21 (Colloquium, Friday, 4:30&ndash;5:30 pm, Huiyuan 3-415), 
+            <p>Dec 10, '21 (Colloquium, Friday, 4:30&ndash;5:30 pm, Huiyuan 3-415, tentatively), 
                 <b><a href="https://people.mpim-bonn.mpg.de/zagier/" target="_blank">Don Zagier</a></b> 
                 (Max Planck Institute for Mathematics), 
                 <a onclick="toggle_visibility('7');">
