--- a/index.html
+++ b/index.html
@@ -195,22 +195,43 @@
                 </div>
             </p>
 
-            <p>Dec 6, '21 (zoom), 
-                <b><a href="https://www.kurims.kyoto-u.ac.jp/~mayuko/english.html" target="_blank">Mayuko Yamashita</a></b> 
-                (Kyoto University), 
+            <p>Dec 3, '21 (Colloquium, Friday, 4:00&ndash;5:00 pm, Lynn Library Lecture Hall 110), 
+                <b><a href="https://people.mpim-bonn.mpg.de/zagier/" target="_blank">Don Zagier</a></b> 
+                (Max Planck Institute for Mathematics), 
                 <a onclick="toggle_visibility('6');">
-                    <i>TBA</i></a><br />
+                    <i>Topology and number theory</i></a><br />
                 <div id="6" class="toshow" style="display:none">
                     TBA
                 </div>
             </p>
 
-            <p>Dec 10, '21 (Colloquium, Friday, 4:30&ndash;5:30 pm, Huiyuan 3-415, tentatively), 
+            <p>Dec 6, '21 (Monday, 3:00&ndash;4:00 pm, 
+                <a href="https://icm.sustech.edu.cn/" target="_blank">SUSTech International Center for Mathematics</a>), 
                 <b><a href="https://people.mpim-bonn.mpg.de/zagier/" target="_blank">Don Zagier</a></b> 
                 (Max Planck Institute for Mathematics), 
                 <a onclick="toggle_visibility('7');">
-                    <i>TBA</i></a><br />
+                    <i>What can the Betti numbers of a smooth manifold be?</i></a><br />
                 <div id="7" class="toshow" style="display:none">
+                    TBA
+                </div>
+            </p>
+
+            <p>Dec 6, '21 (Monday, 4:20&ndash;5:10 pm, zoom: 846 6434 3534), 
+                <b><a href="https://www.kurims.kyoto-u.ac.jp/~mayuko/english.html" target="_blank">Mayuko Yamashita</a></b> 
+                (Kyoto University), 
+                <a onclick="toggle_visibility('8');">
+                    <i>TBA</i></a><br />
+                <div id="8" class="toshow" style="display:none">
+                    TBA
+                </div>
+            </p>
+
+            <p>Dec 13&ndash;15 (date TBD), '21 (Goettsche Workshop talk, 5:00&ndash;6:00 pm), 
+                <b><a href="https://people.mpim-bonn.mpg.de/zagier/" target="_blank">Don Zagier</a></b> 
+                (Max Planck Institute for Mathematics), 
+                <a onclick="toggle_visibility('9');">
+                    <i>Mock modular forms and wall crossing</i></a><br />
+                <div id="9" class="toshow" style="display:none">
                     TBA
                 </div>
             </p>
