--- a/index.html
+++ b/index.html
@@ -220,9 +220,17 @@
                 <b><a href="https://www.kurims.kyoto-u.ac.jp/~mayuko/english.html" target="_blank">Mayuko Yamashita</a></b> 
                 (Kyoto University), 
                 <a onclick="toggle_visibility('8');">
-                    <i>TBA</i></a><br />
+                    <i>On the absence of all heterotic global anomalies</i></a><br />
                 <div id="8" class="toshow" style="display:none">
-                    TBA
+                    In this talk, I will explain the work "Topological modular forms and the absence of all heterotic global 
+                    anomalies" (<a href="https://arxiv.org/abs/2108.13542" target="_blank">https://arxiv.org/abs/2108.13542</a>) 
+                    with Yuji Tachikawa from a mathematical point of view.  That work is aimed at settling a physical problem to 
+                    show the vanishing of anomalies in heterotic string theories.  We translate the problem into a mathematical 
+                    problem to show that a certain transformation of generalized cohomology theories from TMF (Topological 
+                    Modular Forms) to the Anderson dual to String bordism vanishes, and prove that it is indeed the case.  Here, 
+                    the Anderson dual of a generalized homology theory plays the crucial role in the classification of anomalies 
+                    by a conjecture of Freed and Hopkins.  I will also explain this point, as well as related works on the 
+                    Anderson duals.
                 </div>
             </p>
 
