--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 </div>
             </p>
 
-            <p>Dec 6, '21 (Monday, 4:20&ndash;5:10 pm, zoom: 846 6434 3534), 
+            <p><a id="Y"></a>Dec 6, '21 (Monday, 4:20&ndash;5:10 pm, zoom: 846 6434 3534), 
                 <b><a href="https://www.kurims.kyoto-u.ac.jp/~mayuko/english.html" target="_blank">Mayuko Yamashita</a></b> 
                 (Kyoto University), 
                 <a onclick="toggle_visibility('8');">
