--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 </div>
             </p>
 
-            <p>Dec 3, '21 (Colloquium, Friday, 4:00&ndash;5:00 pm, Lynn Library Lecture Hall 110), 
+            <p>Dec 3, '21 (Colloquium, Friday, 4:30&ndash;5:30 pm, Lecture Hall 1-111), 
                 <b><a href="https://people.mpim-bonn.mpg.de/zagier/" target="_blank">Don Zagier</a></b> 
                 (Max Planck Institute for Mathematics), 
                 <a onclick="toggle_visibility('6');">
